--- a/.github/workflows/epat_aug20.yml
+++ b/.github/workflows/epat_aug20.yml
@@ -14,13 +14,10 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: write
-  security-events: write
 
 jobs:
   build:
-    name: build and test
+    
     runs-on: ubuntu-latest
 
     steps:
@@ -31,10 +28,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Perform the Unit Test Cases
-      run: mvn -B test
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-      
+   
