--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,10 +13,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    types: [opened, sychronize, reopened]
 
 
 jobs:
-  build:
+  test:
     
     runs-on: ubuntu-latest
 
@@ -28,7 +29,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Run Test with Maven
+      run: mvn -B test
 
    
